# MCPdemo

./: .gitignore  README.md
mcp-client/: .env  client.py  index.html  pyproject.toml  web.py  web_client.py
tools/: pyproject.toml  weather.py  websearch.py
weather/: weather.py
